--- a/index.html
+++ b/index.html
@@ -27,111 +27,111 @@
         <div class="row d-md-flex p-1">
           <div class="col-12 col-md-6">
             <label for="text-start" class="form-label text-start">Card #</label>
-            <input type="text" class="form-control" placeholder="XXXXXXXXXXXXXXXX" aria-label="Recipient's username"
+            <input type="text" class="form-control" placeholder="XXXX XXXX XXXX XXXX" aria-label="Recipient's username"
               aria-describedby="basic-addon2">
           </div>
 
-          <div class="col-6 col-md-3">
+          <div class="col12 col-md-3">
             <label for=" text-start" class="form-label text-start">CVC #</label>
             <input type="text" class="form-control" placeholder="0000" aria-label="Recipient's username"
               aria-describedby="basic-addon2">
           </div>
 
-          <div class="col-6 col-md-3">
+          <div class="col-12 col-md-3">
             <label for="text-start" class="form-label text-start">Amount</label>
             <span class="input-group-text">$</span>
           </div>
         </div>
-      </div>
-      
-      <div class=" row d-md-flex p-1 ">
-        <div class="col-12 col-md-6">
-          <label for="text-start" class="form-label text-start">User Name</label>
-          <input type="text" class="form-control" placeholder="" aria-label="Recipient's username"
-            aria-describedby="basic-addon2">
-        </div>
 
-        <div class="col-12 col-md-6">
-          <label for="text-start" class="form-label text-start">Last Name</label>
-          <input type="text" class="form-control" placeholder="" aria-label="Recipient's username"
-            aria-describedby="basic-addon2">
-        </div>
-      </div>
-
-      <div class="row d-md-flex p-1">
-        <div class="col-12 col-md-6">
-          <label for="text-start" class="form-label text-start">City</label>
-          <input type="text" class="form-control" placeholder="" aria-label="Recipient's username"
-            aria-describedby="basic-addon2">
-        </div>
-
-        <div class="col md-6">
-          <label for="inputState" class="form-label">State</label>
-          <select id="inputState" class="form-select">
-            <option selected>Choose...</option>
-            <option>...</option>
-          </select>
-        </div>
-
-        <div class="col md-6">
-          <label for="text-start" class="form-label text-start">Postal Code</label>
-          <input type="text" class="form-control" placeholder="" aria-label="Recipient's username"
-            aria-describedby="basic-addon2">
-        </div>
-      </div>
-
-      <div class="justify-content">
-        <div class="form-label d-md-flex p-2">
-          <div class="izq text-start col-md-6 p-1">
-            <label for="text-start" class="form-label text-start">We Accept</label>
-            <div class="col-9 mb-3 col-md-8 bg-secondary">
-              <ul class="accordion-button p-2 m-2">
-                <li class="list-group-item m-2">
-                  <input class="form-check-input mc-1" type="radio" name="listGroupRadio" value="" id="firstRadio"
-                    checked>
-                  <i class="fa-brands fa-cc-mastercard fa-xl mx-2"></i>
-                </li>
-                <li class="list-group-item">
-                  <input class="form-check-input mc-12" type="radio" name="listGroupRadio" value="" id="secondRadio">
-                  <i class="fa-brands fa-cc-visa fa-xl mx-2"></i>
-                </li>
-                <li class="list-group-item">
-                  <input class="form-check-input ms-1" type="radio" name="listGroupRadio" value="" id="firstRadio"
-                    checked>
-                  <i class="fa-brands fa-cc-mastercard fa-xl mx-2"></i>
-                </li>
-                <li class="list-group-item">
-                  <input class="form-check-input me-1" type="radio" name="listGroupRadio" value="" id="secondRadio">
-                  <i class="fa-brands fa-cc-visa fa-xl"></i>
-                </li>
-              </ul>
-            </div>
+        <div class=" row d-md-flex p-1 ">
+          <div class="col-12 col-md-6">
+            <label for="text-start" class="form-label text-start">User Name</label>
+            <input type="text" class="form-control" placeholder="" aria-label="Recipient's username"
+              aria-describedby="basic-addon2">
           </div>
 
-          <div class="der text-start col-md-6 p-1">
-            <div class="row d-md-flex p-1">
-              <div class="col md-6">
-                <div class="col m-3">
-                  <div class="row mb-8">
-                    <label for="basic-url" class="form-label">Message</label>
-                    <div class="mb-6">
-                      <textarea class="form-control" id="example" rows="3"></textarea>
-                      <div class="form-text" id="basic-addon4">Add any note here.</div>
+          <div class="col-12 col-md-6">
+            <label for="text-start" class="form-label text-start">Last Name</label>
+            <input type="text" class="form-control" placeholder="" aria-label="Recipient's lastname"
+              aria-describedby="basic-addon2">
+          </div>
+        </div>
+
+        <div class="row d-md-flex p-1">
+          <div class="col-12 col-md-6">
+            <label for="text-start" class="form-label text-start">City</label>
+            <input type="text" class="form-control" placeholder="" aria-label="Recipient's city"
+              aria-describedby="basic-addon2">
+          </div>
+
+          <div class="col12 col-md-3">
+            <label for=" text-start" class="form-label text-start">State</label>
+            <select id="inputState" class="form-select">
+              <option selected>Choose...</option>
+              <option>...</option>
+            </select>
+          </div>
+
+          <div class="col-12 col-md-3">
+            <label for="text-start" class="form-label text-start">Postal Code</label>
+            <input type="text" class="form-control" placeholder="" aria-label="Recipient's username"
+              aria-describedby="basic-addon2">
+          </div>
+        </div>
+
+        <div class="content">
+          <div class="form-label d-md-flex p-2">
+            <div class="izq text-start col-md-6 p-1">
+              <label for="text-start" class="form-label text-start">We Accept</label>
+              <div class="col-12 mb-3 col-md-8 bg-secondary">
+                <ul class="accordion-button p-2 m-2">
+                  <li class="list-group-item m-2">
+                    <input class="form-check-input mc-1" type="radio" name="listGroupRadio" value="" id="firstRadio"
+                      checked>
+                    <i class="fa-brands fa-cc-mastercard fa-xl mx-2"></i>
+                  </li>
+                  <li class="list-group-item">
+                    <input class="form-check-input mc-12" type="radio" name="listGroupRadio" value="" id="secondRadio">
+                    <i class="fa-brands fa-cc-visa fa-xl mx-2"></i>
+                  </li>
+                  <li class="list-group-item">
+                    <input class="form-check-input ms-1" type="radio" name="listGroupRadio" value="" id="firstRadio"
+                      checked>
+                    <i class="fa-brands fa-cc-mastercard fa-xl mx-2"></i>
+                  </li>
+                  <li class="list-group-item">
+                    <input class="form-check-input me-1" type="radio" name="listGroupRadio" value="" id="secondRadio">
+                    <i class="fa-brands fa-cc-visa fa-xl"></i>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="der text-start col-md-6 p-1">
+              <div class="row d-md-flex p-1">
+                <div class="col md-6">
+                  <div class="col m-3">
+                    <div class="row mb-8">
+                      <label for="basic-url" class="form-label">Message</label>
+                      <div class="mb-6">
+                        <textarea class="form-control" id="example" rows="3"></textarea>
+                        <div class="form-text" id="basic-addon4">Add any note here.</div>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="card-footer">
-              <div class="d-grid gap-2 d-md-flex justify-content-md-end bg-body-tertiary p-2 py-3 border">
-                <button type="submit" class="btn btn-secondary btn-sm">Cancel</button>
-                <button type="reset" class="btn btn-primary btn-sm">Send</button>
+              <div class="card-footer">
+                <div class="d-grid gap-2 d-md-flex justify-content-md-end bg-body-tertiary p-2 py-3 border">
+                  <button type="r" class="btn btn-secondary btn-sm">Cancel</button>
+                  <button type="submit" class="btn btn-primary btn-sm">Send</button>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>      
+      <
   </form>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
